[package]
name = "cashmere_cctp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashmere_cctp"

[features]
#default = ["cpi"]
#cpi = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
